K8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: api
  name: api
  namespace: default
spec:
  clusterIP: ""
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    name: api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
