K8s/docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: docs
  name: docs
  namespace: default
spec:
  clusterIP: ""
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: docs
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
